Fixed spacing and formating

--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,38 @@ color: #fff;
 .clock-face:target .hand-minute {
     transform: rotate(4320deg);
 }
+
+.forwards {
+    text-decoration: none;
+    color: white;   
+    width: 6em;
+    display: inline-block; 
+    border-radius: 50%;
+    text-align: center;
+    line-height: 6em;
+    background-color: green;
+    margin: 1em;
+}
+
+.backwards {
+   text-decoration: none;
+    color: white;   
+    width: 6em;
+    display: inline-block; 
+    border-radius: 50%;
+    text-align: center;
+    line-height: 6em;
+    background-color: red;
+    margin: 1em;    
+}
+    
+.backwards:hover, .forwards:hover {
+    background-color: white;
+    color: black;
+    opacity: 1;
+    transition: all 3s linear;
+}
+    
+.main {
+    text-align: center;
+}
